Fix bugs in addBikeRack
Since we are comparing the bike rack coordinates of the most recently added new bike rack report, we need to search by reportId as opposed to bike rack id. As well, the range was reversed.